gaps + fix navbar height + top tabbar autohide

--- a/chrome/ShyFox/shy-top.css
+++ b/chrome/ShyFox/shy-top.css
@@ -25,6 +25,7 @@
   --topbar-zindex: 5;
   
   --hover-top: calc( var(--margin) + var(--margin-on-top) );
+  --top-gap: calc( var(--margin) / 2 )
 }
 
 :root[titlepreface*="​"]{
@@ -52,6 +53,8 @@
   #titlebar{ z-index: calc( var(--topbar-zindex) + 1 ) !important; }
   
   #TabsToolbar{
+    height: var(--tbbr-size) !important;
+    
     right: var(--topbar-right);
     left: var(--topbar-left);
     top: 0px;
@@ -74,6 +77,8 @@
       --tbbr-hover-txt: var(--tb-txt);
       --tbbr-hover-brs: var(--big-rounding);
       --tbbr-hover-brd: var(--border);
+      
+      --tbbr-hover-top: var(--hover-top);
       
       top: calc( var(--margin-on-top) - var(--tbbr-size) );
       margin-inline: var(--top-hide-margin-inline) !important;
@@ -116,6 +121,11 @@
     height: var(--nvbr-hgt) !important;
   }
   
+  #nav-bar-customization-target{
+    height: var(--nvbr-hgt) !important;
+    margin-top: -1px !important;
+  }
+  
   #nav-bar-customization-target :is( #stop-reload-button, #edit-controls, #zoom-controls ) > *,
   #nav-bar-customization-target > *:not(#unified-extensions-button),
   #nav-bar-customization-target > *[disabled],
@@ -126,6 +136,9 @@
   
   :root[titlepreface*="​"]{
     
+    --nvbr-gap: 0px;
+    @media not (-moz-bool-pref: "shyfox.position.tabbar") { --nvbr-gap: var(--top-gap); }
+    
     #nav-bar{
       --nvbr-hover-col: var(--tb-col);
       --nvbr-hover-txt: var(--tb-txt);
@@ -133,7 +146,8 @@
       --nvbr-hover-brd: var(--border);
       
       --toolbarbutton-icon-fill: var(--tb-txt) !important;
-      --nvbr-hover-top: calc( var(--hover-top) + var(--top-tbbr-hgt) );
+      
+      --nvbr-hover-top: calc( var(--hover-top) + var(--top-tbbr-hgt) + var(--nvbr-gap) );
       
       top: calc( var(--margin-on-top) - var(--nvbr-hgt) );
       margin-inline: var(--top-hide-margin-inline) !important;
@@ -182,16 +196,17 @@
   #PersonalToolbar > * { transition: var(--opacity-transition) !important; }
   
   :root[titlepreface*="​"]{
+    
+    --bmbr-gap: 0px;
+    @media not (-moz-bool-pref: "shyfox.position.navbar"), not (-moz-bool-pref: "shyfox.position.tabbar") { --bmbr-gap: var(--top-gap); }  
+    
     #PersonalToolbar{
       --bmbr-hover-col: var(--tb-col);
       --bmbr-hover-txt: var(--tb-txt);
       --bmbr-hover-brs: var(--big-rounding);
       --bmbr-hover-brd: var(--border);
       
-      --bmbr-gap: calc(var(--margin) / 2);
-      @media (-moz-bool-pref: "shyfox.position.navbar") { --bmbr-gap: 0px; }
-      
-      --bmbr-hover-top: calc(var(--hover-top) + var(--top-tbbr-hgt) + var(--top-nvbr-hgt) + var(--bmbr-gap));
+      --bmbr-hover-top: calc(var(--hover-top) + var(--top-tbbr-hgt) + var(--top-nvbr-hgt) + var(--bmbr-gap) + var(--nvbr-gap) );
       
       top: calc( var(--margin-on-top) - var(--bmbr-hgt) );
       margin-inline: var(--top-hide-margin-inline) !important;
@@ -343,6 +358,7 @@
   
   
   @media not (-moz-bool-pref: "shyfox.position.tabbar") { &:has(
+    #TabsToolbar:hover, #TabsToolbar *:not(.tabbrowser-tab)[open],
     #nav-bar-customization-target:hover, #nav-bar-customization-target *[open],
     #PanelUI-menu-button:hover, #PanelUI-menu-button[open]
   ) { --top-hvbr-opct: 0;
@@ -359,6 +375,12 @@
     border-radius: var(--bmbr-hover-brs) !important; border: var(--bmbr-hover-brd) !important;
     & > * { opacity: var(--enabled-opct) !important; } & > *[disabled] { opacity: var(--disabled-opct) !important; }
   } }
+  #TabsToolbar{
+    top: var(--tbbr-hover-top);
+    background: var(--tbbr-hover-col) !important; color: var(--tbbr-hover-txt) !important;
+    border-radius: var(--tbbr-hover-brs) !important; border: var(--tbbr-hover-brd) !important;
+    #TabsToolbar-customization-target > * { opacity: var(--enabled-opct) !important; } #TabsToolbar-customization-target > *[disabled] { opacity: var(--disabled-opct) !important; }
+  }
   } }
   
   
@@ -380,6 +402,12 @@
     background: var(--bmbr-hover-col) !important; color: var(--bmbr-hover-txt) !important;
     border-radius: var(--bmbr-hover-brs) !important; border: var(--bmbr-hover-brd) !important;
     & > * { opacity: var(--enabled-opct) !important; } & > *[disabled] { opacity: var(--disabled-opct) !important; }
+  } }
+  @media not (-moz-bool-pref: "shyfox.position.tabbar") { #TabsToolbar{
+    top: var(--tbbr-hover-top);
+    background: var(--tbbr-hover-col) !important; color: var(--tbbr-hover-txt) !important;
+    border-radius: var(--tbbr-hover-brs) !important; border: var(--tbbr-hover-brd) !important;
+    #TabsToolbar-customization-target > * { opacity: var(--enabled-opct) !important; } #TabsToolbar-customization-target > *[disabled] { opacity: var(--disabled-opct) !important; }
   } }
   } }
   
@@ -403,6 +431,12 @@
     border-radius: var(--bmbr-hover-brs) !important; border: var(--bmbr-hover-brd) !important;
     & > * { opacity: var(--enabled-opct) !important; } & > *[disabled] { opacity: var(--disabled-opct) !important; }
   }
+  @media not (-moz-bool-pref: "shyfox.position.tabbar") { #TabsToolbar{
+    top: var(--tbbr-hover-top);
+    background: var(--tbbr-hover-col) !important; color: var(--tbbr-hover-txt) !important;
+    border-radius: var(--tbbr-hover-brs) !important; border: var(--tbbr-hover-brd) !important;
+    #TabsToolbar-customization-target > * { opacity: var(--enabled-opct) !important; } #TabsToolbar-customization-target > *[disabled] { opacity: var(--disabled-opct) !important; }
+  } }
   } }
   
 }
